# MyLang

./: .gitignore  CMakeLists.txt  build.sh  example.cpp
.build/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: Describe.md  PosixRE.cpp  Targets.md  example.txt  main.cpp  сalculator.cpp
src/Actual/: DFA.cpp  DFA.hpp  RE.cpp  RE.hpp
src/Base/: Link.hpp  SetLink.hpp  Stream.hpp  SubRange.hpp
src/Base/Tree/: Print.hpp  Tree.hpp
src/CFG/: CFG.hpp  Concepts.md  Print.hpp  ReadFile.hpp  Reader.dfa  Targets.md
src/CFG/Algo/: CYK.hpp  Earley.hpp
src/CFG/Class/: CFG.hpp  Concepts.hpp  Concepts.md  ParseTree.hpp  _CFG.hpp
src/FA/: PrintFA.hpp  RE.md  RE2DFA.hpp  SimpleReadFile.hpp  Targets.md
src/FA/Algo/: Describe.md  Det.hpp  Determine.hpp  Eps.hpp  FuncNFA.hpp  Minimize.hpp  NFA2DFA.hpp  RemoveEps.hpp  RemoveUseless.hpp  SetStateFA.hpp
src/FA/Class/: Concept.hpp  Concept.md  Concepts.hpp  Concepts.md  DFA.hpp  FA.hpp  FastDFA.hpp  NFA.hpp  Traits.hpp
src/FA/FastDFA/: DFA.hpp  Open.hpp  Print.hpp  Save.hpp
src/RE/: CreatorNFA.hpp  PosixDFA.txt  PosixPlusDFA.txt  PosixPlusRPN.hpp  PosixRPN.hpp  RE2DFA.hpp  Targets.md  genDFA.cpp
src/RPN/: RPN.hpp  Targets.md
src/RPN/Class/: Concept.hpp  Concept.md  Concepts.md  RPN.hpp  RuleRPNType.hpp  Table.hpp  Traits.hpp
src/RPN/Creator/: NFA.hpp
src/RPN/Rule/: MyRE.hpp  NFAfunctions.hpp
src/TypeTraits/: Bindings.hpp  C_IterableT.hpp  C_Iterator.hpp  DeclVal.hpp  Identity.hpp  IterableTraits.hpp  IteratorTraits.hpp  Link.hpp  SubRange.hpp  TypeList.hpp
